Bug 285787 - QApt Worker misreports some initialization errors as lock errors
Summary: QApt Worker misreports some initialization errors as lock errors
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: qaptworker (other bugs)
Version First Reported In: 1.2.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 289986 290568 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-04 23:53 UTC by bengunnink
Modified: 2012-04-07 22:57 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bengunnink 2011-11-04 23:53:59 UTC
Version:           1.2.1 (using KDE 4.7.2) 
OS:                Linux

Fresh install of Kubuntu 11.10 x86_64.  Muon Software Center can install software; I can also install software via apt-get.  However, Muon Package Manager consistently gives me the error:

--------------------
Another application seems to be using the package system at this time. You must close all other package managers before you will be able to install or remove any packages.
--------------------

When searching for this error, I found https://bugs.kde.org/show_bug.cgi?id=284962.

When I perform "sudo fuser -vki /var/lib/dpkg/lock;sudo dpkg --configure -a" as per J.T.'s instructions in that thread, the system does not find any process holding onto the lock file, and the problem persists.

Reproducible: Always

Steps to Reproduce:
Launch Muon Package Manager

Actual Results:  
Receive the above error when attempting to Apply Changes

Expected Results:  
Normal installation of packages

OS: Linux (x86_64) release 3.0.0-12-generic
Compiler: gcc
Comment 1 Jonathan Thomas 2012-01-28 15:31:07 UTC
*** Bug 290568 has been marked as a duplicate of this bug. ***
Comment 2 Jonathan Thomas 2012-01-28 15:31:35 UTC
*** Bug 289986 has been marked as a duplicate of this bug. ***
Comment 3 bengunnink 2012-01-28 15:42:26 UTC
FWIW, the problem went away after successive updates done via commandline, though I'm afraid I don't know precisely what version fixed it.
Comment 4 skierpage 2012-02-13 22:29:05 UTC
This is happening to me running Kubuntu 12.04 alpha2 (KDE 4.8.00) with updates, and muon-updater 'Muon Update Manager: 1.2.95 "Daring Dalek"'.

For a few weeks the regular Software Updates have worked fine, but today muon-updater runs, finds a bunch of packages to update (QApt Package Installer + VLC + a lot of System Updates), warns they "may require new packages to be installed or removed", and when I [Mark Upgrades] and click [Install Updates] I get Muon's alert. Maybe muon-updater can't updte QApt Package Installer?

There's no /var/lib/dpkg/lock, no users of it. Nothing new in /var/log/apt since the last successful update late last night. The only thing in /var/log/dpkg.log is
  2012-02-13 13:56:43 startup packages configure

While the alert is up the process list includes
%  % ps alx -w -w | egrep 'dpkg|apt|keep|pack|muon' 
0  1000 29868  1907  20   0   4628   808 wait   S    pts/0      0:03 strace -f muon-updater
1  1000 29870     1  20   0 648776 83520 poll_s Sl   pts/0      0:04 muon-updater
4     0 29888     1  20   0  85900 10140 poll_s S    ?          0:00 /usr/bin/python /usr/share/apt-xapian-index/update-apt-xapian-index-dbus

and after I close Muon the last one continues to run.  So how do I debug update-apt-xapian-index-dbus ?

Please make Muon *always* print to stdout/stderr the internal reason why it's putting up a failure alert. I see nothing useful in muon-updater's console output.
Comment 5 skierpage 2012-02-13 23:03:05 UTC
I ran `sudo apt-get upgrade` (which reported "The following packages have been kept back: esound-common libesd0 ... vlc ... ) and then `sudo apt-get install vlc`.  Then I clicked the Muon Updater system tray icon and it was able to update esound.  This was all in the same session. So perhaps there was something about that initial bunch of updates that Muon couldn't handle.
Comment 6 Jonathan Thomas 2012-04-05 04:42:39 UTC
Git commit b820b855b549015f84acefbac5d57f8f24e6b271 by Jonathan Thomas.
Committed on 05/04/2012 at 06:40.
Pushed by jmthomas into branch 'master'.

Report APT errors that occur during marking in the worker as InitErrors with details.
There wasn't a check for these errors before, so the APT error stack still had them on top, and we were getting them when we checked for LockErrors.

M  +14   -0    src/worker/worker.cpp

http://commits.kde.org/libqapt/b820b855b549015f84acefbac5d57f8f24e6b271
Comment 7 Jonathan Thomas 2012-04-05 04:43:07 UTC
Git commit 4c0ab53a1e1b132626250022a829b7dc93f8b912 by Jonathan Thomas.
Committed on 05/04/2012 at 06:40.
Pushed by jmthomas into branch '1.3'.

Report APT errors that occur during marking in the worker as InitErrors with details.
There wasn't a check for these errors before, so the APT error stack still had them on top, and we were getting them when we checked for LockErrors.

M  +14   -0    src/worker/worker.cpp

http://commits.kde.org/libqapt/4c0ab53a1e1b132626250022a829b7dc93f8b912
Comment 8 Jonathan Thomas 2012-04-07 22:57:52 UTC
*** Bug 297681 has been marked as a duplicate of this bug. ***