Report APT errors that occur during marking in the worker as InitErrors with details. There wasn't a check for these errors before, so the APT error stack still had them on top, and we were getting them when we checked for LockErrors.

BUG:285787